修复难度值溢出问题

--- a/etc/index.html
+++ b/etc/index.html
@@ -59,7 +59,7 @@
     <h1>Tinychain Websocket Page</h1>
 
     <p>
-      This page demonstrates how Tinychain works. commands are: getnewaccount; startmining $address; send $amount $address;
+      This page demonstrates how Tinychain works. commands are: getnewaccount; startmining $address; send $address $amount;
     </p>
 
     <div id="messages">
